<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Strings -->
    <string name="hello">Hello World, CTF!</string>
    <string name="app_name">Capture The Flag!</string>
    <string name="default_note_text">Send a message!</string>
    <string name="message_button">Send a message!</string>
    <string name="welcome">Welcome to CTF!</string>
    <string name="welcome">Use NFC to pass the flag!</string>
    <string name="nfc_explanation">Type in a message to send via NFC!</string>
    <string name="comms_choice">Choose an option!</string> 
    <string name="storage">See stored messages!</string> 
    <string name="storage2">Message received-</string> 
    <string name="check">Check game status</string> 
    
    <!-- Buttons -->
    <string name="nfc_button">Pass the Flag!</string>
    <string name="communication">Interact with other devices!</string>
    <string name="bluetooth_button">Check for nearby enemies!</string>
    <string name="maps_button">Check the map!</string>
    
    
    <!-- Bluetooth information -->
    <string name="title_paired_devices">Paired Devices!</string>
    <string name="title_other_devices">Enemies located -</string>
    <string name="button_scan">Scan for enemies!</string>
    <string name="none_found">No enemies found!</string>
    <string name="scanning">Scanning for enemies!</string>
    <string name="select_device">Located enemies!</string>
    <string name="enemy">Enemies located!</string>
    <string name="enemy_signal">Enemies proximity -</string>
    
    <!-- Styles -->
    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
        <item name="android:typeface">serif</item>
    </style>

</resources>